Mudando a arquitetura do projeto para o JavaWeb

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /PRJ05 Trash Track/TrashTrack/build/
+/PRJ04 RoçaPlan/Codigos/RocaPlan/nbproject/private/
+/PRJ04 RoçaPlan/Codigos/RocaPlan/build/
+/PRJ04 RoçaPlan/Codigos/RocaPlan/dist/
