chore: mudança no gitignore
evita as mudanças nos arquivos private

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /PRJ04 RoçaPlan/Codigos/RocaPlan/nbproject/private/
 /PRJ04 RoçaPlan/Codigos/RocaPlan/build/
 /PRJ04 RoçaPlan/Codigos/RocaPlan/dist/
+/PRJ05 Trash Track/TrashTrack/nbproject/private
