--- a/PRJ05 Trash Track/TrashTrack/nbproject/private/private.properties
+++ b/PRJ05 Trash Track/TrashTrack/nbproject/private/private.properties
@@ -1,11 +1,11 @@
 
-deploy.ant.properties.file=C:\\Users\\majus\\AppData\\Roaming\\NetBeans\\22\\config\\GlassFishEE6\\Properties\\gfv31256788800.properties
+deploy.ant.properties.file=C:\\Users\\victo\\AppData\\Roaming\\NetBeans\\22\\config\\GlassFishEE6\\Properties\\gfv3-1602293066.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/majus/GlassFishServer/glassfish/domains/domain1
-j2ee.server.home=C:/Users/majus/GlassFishServer/glassfish
-j2ee.server.instance=[C:\\Users\\majus\\GlassFishServer\\glassfish;C:\\Users\\majus\\GlassFishServer\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
-j2ee.server.middleware=C:/Users/majus/GlassFishServer
+j2ee.server.domain=C:/Users/victo/GlassFish_Server7.0.9/glassfish/domains/domain1
+j2ee.server.home=C:/Users/victo/GlassFish_Server7.0.9/glassfish
+j2ee.server.instance=[C:\\Users\\victo\\GlassFish_Server7.0.9\\glassfish;C:\\Users\\victo\\GlassFish_Server7.0.9\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
+j2ee.server.middleware=C:/Users/victo/GlassFish_Server7.0.9
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\majus\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=C:\\Users\\victo\\AppData\\Roaming\\NetBeans\\22\\build.properties
