Chore: gitIgnore adicionado arquivo properties

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /PRJ04 RoçaPlan/Codigos/RocaPlan/build/
 /PRJ04 RoçaPlan/Codigos/RocaPlan/dist/
 /PRJ05 Trash Track/TrashTrack/nbproject/private
+PRJ05 Trash Track/TrashTrack/nbproject/private/private.xml
+PRJ05 Trash Track/TrashTrack/nbproject/private/private.properties
+PRJ05 Trash Track/TrashTrack/web/WEB-INF/glassfish-web.xml
