Alterações no Back-End
Modificação das classes e páginas referentes ao cadastro de cliente.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 PRJ05 Trash Track/TrashTrack/nbproject/private/private.xml
 PRJ05 Trash Track/TrashTrack/nbproject/private/private.properties
 PRJ05 Trash Track/TrashTrack/web/WEB-INF/glassfish-web.xml
+/PRJ01 Conecta/Back-End/Projeto Java Web/ConectaPlus/build/
