--- a/PRJ01 Conecta/Back-End/Projeto Java Web/ConectaPlus/nbproject/private/private.properties
+++ b/PRJ01 Conecta/Back-End/Projeto Java Web/ConectaPlus/nbproject/private/private.properties
@@ -4,4 +4,5 @@ j2ee.server.domain=C:/Users/Tavion/GlassFish_Server/glassfish/domains/domain1
 j2ee.server.home=C:/Users/Tavion/GlassFish_Server/glassfish
 j2ee.server.instance=[C:\\Users\\Tavion\\GlassFish_Server\\glassfish;C:\\Users\\Tavion\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
 j2ee.server.middleware=C:/Users/Tavion/GlassFish_Server
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Tavion\\AppData\\Roaming\\NetBeans\\23\\build.properties
