--- a/PRJ01 Conecta/Programação do Projeto/Back-End/Projeto Java Web/ConectaPlus/nbproject/project.properties
+++ b/PRJ01 Conecta/Programação do Projeto/Back-End/Projeto Java Web/ConectaPlus/nbproject/project.properties
@@ -40,15 +40,16 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv700ee10
 jar.compress=false
 javac.classpath=\
-    ${libs.maria-db.3.1.4.classpath}
+    ${libs.maria-db.3.1.4.classpath}:\
+    ${libs.MariaDB-ConnectorJ-3.1.4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=19
-javac.target=19
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
