--- a/PRJ01 Conecta/Programação do Projeto/Back-End/Projeto Java Web/ConectaPlus/nbproject/private/private.properties
+++ b/PRJ01 Conecta/Programação do Projeto/Back-End/Projeto Java Web/ConectaPlus/nbproject/private/private.properties
@@ -1,8 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\17\\config\\GlassFishEE6\\Properties\\gfv3-1940979224.properties
+deploy.ant.properties.file=C:\\Users\\otavi\\AppData\\Roaming\\NetBeans\\24\\config\\GlassFishEE6\\Properties\\gfv31322440297.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/LENOVO/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/LENOVO/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\LENOVO\\GlassFish_Server\\glassfish;C:\\Users\\LENOVO\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
-j2ee.server.middleware=C:/Users/LENOVO/GlassFish_Server
+j2ee.server.domain=C:/Users/otavi/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/otavi/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\otavi\\GlassFish_Server\\glassfish;C:\\Users\\otavi\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
+j2ee.server.middleware=C:/Users/otavi/GlassFish_Server
+javac.debug=true
+javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\otavi\\AppData\\Roaming\\NetBeans\\24\\build.properties
