Integração UC23 - Agenda Profissional

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ PRJ05 Trash Track/TrashTrack/nbproject/private/private.properties
 PRJ05 Trash Track/TrashTrack/web/WEB-INF/glassfish-web.xml
 /PRJ01 Conecta/Back-End/Projeto Java Web/ConectaPlus/build/
 /PRJ01 Conecta/Programação do Projeto/Back-End/Projeto Java Web/ConectaPlus/dist/
+/PRJ01 Conecta/Programação do Projeto/Back-End/UC20-Lista de Agendamentos Denunciados/ListaDeServicosDenunciados/dist/
