--- a/PRJ01 Conecta/Programação do Projeto/Back-End/UC23-Agenda do Profissional/AgendaDoProfissional/nbproject/private/private.properties
+++ b/PRJ01 Conecta/Programação do Projeto/Back-End/UC23-Agenda do Profissional/AgendaDoProfissional/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\otavi\\AppData\\Roaming\\NetBeans\\24\\config\\GlassFishEE6\\Properties\\gfv31322440297.properties
+deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\24\\config\\GlassFishEE6\\Properties\\gfv3-1611299531.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/otavi/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/otavi/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\otavi\\GlassFish_Server\\glassfish;C:\\Users\\otavi\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
-j2ee.server.middleware=C:/Users/otavi/GlassFish_Server
-user.properties.file=C:\\Users\\otavi\\AppData\\Roaming\\NetBeans\\24\\build.properties
+j2ee.server.domain=C:/Users/Admin/GlassFish7015/glassfish/domains/domain1
+j2ee.server.home=C:/Users/Admin/GlassFish7015/glassfish
+j2ee.server.instance=[C:\\Users\\Admin\\GlassFish7015\\glassfish;C:\\Users\\Admin\\GlassFish7015\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
+j2ee.server.middleware=C:/Users/Admin/GlassFish7015
+user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\24\\build.properties
