--- a/PRJ01 Conecta/Programação do Projeto/Back-End/Projeto Java Web/ConectaPlus/nbproject/project.properties
+++ b/PRJ01 Conecta/Programação do Projeto/Back-End/Projeto Java Web/ConectaPlus/nbproject/project.properties
@@ -27,7 +27,6 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.mariadb-java-client-3.5.1.jar=C:\\Users\\Admin\\GlassFish7015\\glassfish\\domains\\domain1\\lib\\mariadb-java-client-3.5.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +41,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv700ee10
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.5.1.jar}
+    ${libs.maria-db-3.5.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
